--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,60 +7,34 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*/*.xml
 #mybatis.type-aliases-package=cn.ac.big.bigd.webservice.model
 
 
-#spring.datasource.gsa.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.gsa.jdbc-url=jdbc:mysql://192.168.132.11:33067/big_gsav2_20190729_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true
-#spring.datasource.gsa.username = gsachenx
-#spring.datasource.gsa.password = AsCXG2021%b2_
+spring.datasource.gsa.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.gsa.jdbc-url=jdbc:mysql://192.168.130.12:33066/big_gsav2_20190729_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
+spring.datasource.gsa.username = biggsa
+spring.datasource.gsa.password = biggsa123
 
 #spring.datasource.gsa.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.gsa.jdbc-url=jdbc:mysql://192.168.132.11:33067/big_gsav2_20190729_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
 #spring.datasource.gsa.username = biggsa
 #spring.datasource.gsa.password = biggsa123
 
-spring.datasource.gsa.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.gsa.jdbc-url=jdbc:mysql://192.168.130.13:3306/big_gsav2_20190729_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
-spring.datasource.gsa.username = biggsa
-spring.datasource.gsa.password = biggsa123
-
-
-spring.datasource.ncbi.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.ncbi.jdbc-url=jdbc:mysql://192.168.130.12:3306/insdc_20230223?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
-spring.datasource.ncbi.username = biggsa
-spring.datasource.ncbi.password = biggsa123
+#spring.datasource.ncbi.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.ncbi.jdbc-url=jdbc:mysql://192.168.130.12:3306/insdc_20230223?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
+#spring.datasource.ncbi.username = biggsa
+#spring.datasource.ncbi.password = biggsa123
 
 
 #spring.datasource.human.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.human.jdbc-url=jdbc:mysql://192.168.132.11:33066/big_gsahuman_20200409_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
-#spring.datasource.human.username = bigselect
-#spring.datasource.human.password = bigselect123
+#spring.datasource.human.jdbc-url=jdbc:mysql://192.168.130.13:3306/big_gsahuman_20200409_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
+#spring.datasource.human.username = biggsa
+#spring.datasource.human.password = biggsa123
+#
+#
+#spring.datasource.omix.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.omix.jdbc-url=jdbc:mysql://192.168.132.11:33066/big_omix_20200910_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
+#spring.datasource.omix.username = biggsa
+#spring.datasource.omix.password = biggsa123
 
-spring.datasource.human.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.human.jdbc-url=jdbc:mysql://192.168.130.13:3306/big_gsahuman_20200409_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
-spring.datasource.human.username = biggsa
-spring.datasource.human.password = biggsa123
-
-
-spring.datasource.omix.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.omix.jdbc-url=jdbc:mysql://192.168.132.11:33066/big_omix_20200910_1?useUnicode=true&characterEncoding=utf-8&noAccessToProcedureBodies=true&useSSL=false
-spring.datasource.omix.username = biggsa
-spring.datasource.omix.password = biggsa123
-
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://192.168.132.11:33067/big_gsav2_20170630_1??useUnicode=true&characterEncoding=utf-8
-#spring.datasource.username = biggsa
-#spring.datasource.password = biggsa123
-
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://localhost:3306/big_20210315??useUnicode=true&characterEncoding=utf-8
-#spring.datasource.username = root
-#spring.datasource.password = 123456
-
-#server.tomcat.remote_ip_header=x-forwarded-for
-#server.tomcat.protocol_header=x-forwarded-proto
-#server.tomcat.port-header=X-Forwarded-Port
-#server.use-forward-headers=true
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 server.port=9096
 server.servlet.context-path=/gsaFamily-Index
-#spring.resources.static-locations
