--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,6 @@ spring.datasource.gsa.password = biggsa123
 
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+logging.level.com.zaxxer.hikari=ERROR
 server.port=9096
 server.servlet.context-path=/gsaFamily-Index
